@@ -1,3 +1,8 @@
+Development Portal (2017-11-01 shi)
+==============================
+Fix @ref conversion for participating, provider, receiver orgs
+
+
 Development Portal (2017-10-27 shi)
 ==============================
 Update csv headers for list(activities, budget, transactions)
